[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/UITextures/HealthBar_Small_Bg.png" type="Texture" id=2]
[ext_resource path="res://Resources/Textures/UITextures/HealthBar_Small_Inside.png" type="Texture" id=3]
[ext_resource path="res://Resources/Themes/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Themes/Fonts/Roboto.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
extra_spacing_top = 40
font_data = ExtResource( 4 )

[node name="HealthBar" type="Control" groups=["HealthBar"]]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 184.0
margin_top = -24.0
margin_right = 184.0
margin_bottom = -24.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_left = -78.6667
margin_top = -36.6667
margin_right = 121.333
margin_bottom = -16.6667
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.713726, 0.180392, 0.180392, 1 )

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_left = -78.6667
margin_top = -36.6667
margin_right = 122.317
margin_bottom = -16.6667
value = 100.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.278431, 0.705882, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthNumbers" type="HBoxContainer" parent="."]
margin_left = -78.6667
margin_top = -68.6667
margin_right = 418.333
margin_bottom = 82.3333
rect_scale = Vector2( 0.2, 0.2 )

[node name="HealthCurrent" type="Label" parent="HealthNumbers"]
margin_right = 219.0
margin_bottom = 151.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.784314, 0.223529, 0.223529, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.658824 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 5 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthMax" type="Label" parent="HealthNumbers"]
margin_left = 223.0
margin_top = 17.0
margin_right = 356.0
margin_bottom = 133.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.658824 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
